--- a/.env template
+++ b/.env template
@@ -1,2 +1,2 @@
-MONGODB='mongodb+srv://arpanet80:Dante2011@clusterdespliegue.jmodcqi.mongodb.net/despliegueted'
+MONGODB='mongodb+srv://arpanet80:*******@clusterdespliegue.jmodcqi.mongodb.net/despliegueted'
 PORT=3000
